# beancount-no-dnb

./: .gitignore  README.md  pyproject.toml
beancount_no_dnb/: __init__.py  mastercard.py  models.py
test_data/: sample_statement.xlsx
tests/: __init__.py  conftest.py  test_extract.py  test_identify.py  test_models.py
